Modified "EU Data_merge all years": accidentally had left out the conversion from object cols to category. Plus uploaded requirements.txt in extensive and reduced form

--- a/notebooks/Andreas/EU Data_merge all years.ipynb
+++ b/notebooks/Andreas/EU Data_merge all years.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
        "Name: year, dtype: Int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,25 +176,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total memory usage before optimization: 1698.70 MB\n",
+      "Total memory usage before optimization: 18702.28 MB\n",
       "Total memory usage after optimization: 1616.06 MB\n"
      ]
     }
    ],
    "source": [
-    "# Further optimize memory usage by cheking if after the merge any column (dataype) can still be optimized/reduced\n",
+    "# Optimize memory usage by checking if after the merge any column (dataype) can still be optimized/reduced\n",
     "\n",
     "def optimize_dtypes(df):\n",
     "    # Calculate total memory usage before optimization\n",
     "    before_mem = df.memory_usage(deep=True).sum()\n",
     "    print(f\"Total memory usage before optimization: {before_mem / 1024**2:.2f} MB\")\n",
+    "    \n",
+    "    # Convert all object type to category\n",
+    "    obj_cols = df.select_dtypes(include=\"object\").columns\n",
+    "    df[obj_cols] = df[obj_cols].astype(\"category\")\n",
     "    \n",
     "    # Downcast integer columns in place\n",
     "    int_cols = df.select_dtypes(include='int').columns\n",
@@ -213,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -272,12 +276,14 @@
     }
    ],
    "source": [
-    "EU_df.info()  # shows that only #identical occurences was reduced from int64 to int16\n"
+    "EU_df.info()  \n",
+    "\n",
+    "# shows that aside from object type being converted to category only #identical occurences was reduced from int64 to int16\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -486,14 +492,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total memory usage before optimization: 1613.99 MB\n",
+      "Total memory usage before optimization: 1614.01 MB\n",
       "Numerical columns to be converted: ['ID', 'r', 'm (kg)', 'Mt', 'Enedc (g/km)', 'Ewltp (g/km)', 'W (mm)', 'At1 (mm)', 'At2 (mm)', 'ec (cm3)', 'ep (KW)', 'z (Wh/km)', 'Ernedc (g/km)', 'Erwltp (g/km)', 'De', 'Vf', 'year', 'Fuel consumption ', 'Electric range (km)', '#identical occurences']\n",
       "Column 'ID' converted to float32.\n",
       "Column 'r' converted to float32.\n",
@@ -583,7 +589,7 @@
       "#identical occurences     float32\n",
       "dtype: object\n",
       "\n",
-      "Total memory usage after optimization: 1724.18 MB\n",
+      "Total memory usage after optimization: 1724.20 MB\n",
       "Memory usage difference: 110.19 MB\n"
      ]
     }
@@ -652,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +873,7 @@
        "<Axes: xlabel='Ewltp (g/km)', ylabel='Count'>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -889,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +904,7 @@
        "53719"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +928,7 @@
        "208441"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -937,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +959,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +979,7 @@
        "5648196"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
