Added nicer textbloc in the begining to explain what the script does.

--- a/notebooks/Tillmann/DataMining_FrenchData_Year2001to2012.ipynb
+++ b/notebooks/Tillmann/DataMining_FrenchData_Year2001to2012.ipynb
@@ -1,27 +1,14 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 28,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nComments on what this notebook does: \\n\\nThis notebook is used to process data from the French webpage. \\nURL: \\nhttps://www.data.gouv.fr/fr/datasets/emissions-de-co2-et-de-polluants-des-vehicules-commercialises-en-france/#_\\n\\nThe Excel files are downloaded and converted to CSV format, with _year.csv appended to the end of each file name. \\nThese files are stored in the project/data directory. Which will be ignored in the ./gitignore file. \\nThe following steps will prepare all csv into a common DataFrame which ranges from the year 2001 to 2014 and describes the registrations of cars in france and some \\nof their technical specifications as well as their CO2 emission. \\n\\nWARNING: \\nFor the script to work the data files must be positiong in the data path of the repository. \\nOr the path to the data must be adapted accordingly. In this script all csv data must be in data_path \\n\\n'"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "\"\"\"\n",
-    "Comments on what this notebook does: \n",
+    "\n",
+    "# Comments on what this notebook does:\n",
     "\n",
     "This notebook is used to process data from the French webpage. \n",
-    "URL: \n",
+    "URL:  \n",
     "https://www.data.gouv.fr/fr/datasets/emissions-de-co2-et-de-polluants-des-vehicules-commercialises-en-france/#_\n",
     "\n",
     "The Excel files are downloaded and converted to CSV format, with _year.csv appended to the end of each file name. \n",
@@ -29,12 +16,13 @@
     "The following steps will prepare all csv into a common DataFrame which ranges from the year 2001 to 2014 and describes the registrations of cars in france and some \n",
     "of their technical specifications as well as their CO2 emission. \n",
     "\n",
-    "WARNING: \n",
+    "# WARNING:\n",
+    "\n",
     "For the script to work the data files must be positiong in the data path of the repository. \n",
     "Or the path to the data must be adapted accordingly. In this script all csv data must be in data_path \n",
     "\n",
-    "#################################################################################################\n",
-    "The process steps which will be done in here: \n",
+    "\n",
+    "# The process steps which will be done in here:**\n",
     "\n",
     " * Loading data \n",
     "     * deleting emtpy columns and empty rows\n",
@@ -62,8 +50,7 @@
     " * Filling empty entries with nans\n",
     "\n",
     " * Saving data frame all into a file called: 'data_all_french.csv'\n",
-    " \n",
-    "\"\"\""
+    " "
    ]
   },
   {
