--- a/notebooks/Andreas/EU Data_merge all years.ipynb
+++ b/notebooks/Andreas/EU Data_merge all years.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current working directory:  c:\\Users\\onepl\\Desktop\\Finanzen Behörden etc - Copy\\Bewerbung\\Fortbildungen\\DS Bootcamp\\Projekt CO2\\Notebooks\n"
+      "Current working directory:  c:\\Users\\onepl\\Desktop\\Finanzen Behörden etc - Copy\\Bewerbung\\Fortbildungen\\DS Bootcamp\\Project Co2 git\\aug24_bds_int---co2\\notebooks\\Andreas\n"
      ]
     }
    ],
@@ -293,7 +293,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_parquet(\"..\\..\\data\\EU\\EU all_dtypes.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "EU_df = df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -350,6 +368,96 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 14442792 entries, 0 to 14442791\n",
+      "Data columns (total 41 columns):\n",
+      " #   Column                 Non-Null Count     Dtype   \n",
+      "---  ------                 --------------     -----   \n",
+      " 0   ID                     14442792 non-null  Int32   \n",
+      " 1   Country                14442792 non-null  category\n",
+      " 2   VFN                    14442792 non-null  category\n",
+      " 3   Mp                     14442792 non-null  category\n",
+      " 4   Mh                     14442792 non-null  category\n",
+      " 5   Man                    14442792 non-null  category\n",
+      " 6   MMS                    14442792 non-null  category\n",
+      " 7   Tan                    14442792 non-null  category\n",
+      " 8   T                      14442792 non-null  category\n",
+      " 9   Va                     14442792 non-null  category\n",
+      " 10  Ve                     14442792 non-null  category\n",
+      " 11  Mk                     14442792 non-null  category\n",
+      " 12  Cn                     14442792 non-null  category\n",
+      " 13  Ct                     14442792 non-null  category\n",
+      " 14  Cr                     14442792 non-null  category\n",
+      " 15  r                      14442792 non-null  Int32   \n",
+      " 16  m (kg)                 14442792 non-null  Int16   \n",
+      " 17  Mt                     14442792 non-null  Int16   \n",
+      " 18  Enedc (g/km)           14442792 non-null  Int16   \n",
+      " 19  Ewltp (g/km)           14442792 non-null  Int16   \n",
+      " 20  W (mm)                 14442792 non-null  Int16   \n",
+      " 21  At1 (mm)               14442792 non-null  Int16   \n",
+      " 22  At2 (mm)               14442792 non-null  Int16   \n",
+      " 23  Ft                     14442792 non-null  category\n",
+      " 24  Fm                     14442792 non-null  category\n",
+      " 25  ec (cm3)               14442792 non-null  Int32   \n",
+      " 26  ep (KW)                14442792 non-null  Int16   \n",
+      " 27  z (Wh/km)              14442792 non-null  Int16   \n",
+      " 28  IT                     14442792 non-null  category\n",
+      " 29  Ernedc (g/km)          14442792 non-null  Float32 \n",
+      " 30  Erwltp (g/km)          14442792 non-null  Float32 \n",
+      " 31  De                     14442792 non-null  Float32 \n",
+      " 32  Vf                     14442792 non-null  Int8    \n",
+      " 33  Status                 14442792 non-null  category\n",
+      " 34  year                   14442792 non-null  Int16   \n",
+      " 35  Date of registration   14442792 non-null  category\n",
+      " 36  Fuel consumption       14442792 non-null  Float32 \n",
+      " 37  ech                    14442792 non-null  category\n",
+      " 38  RLFI                   14442792 non-null  category\n",
+      " 39  Electric range (km)    14442792 non-null  Int16   \n",
+      " 40  #identical occurences  14442792 non-null  int16   \n",
+      "dtypes: Float32(4), Int16(11), Int32(3), Int8(1), category(21), int16(1)\n",
+      "memory usage: 1.5 GB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info(show_counts=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty DataFrame\n",
+      "Columns: [ID, year, count]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Group by 'ID' and 'year' and count occurrences\n",
+    "duplicate_counts = df.groupby(['ID', 'year']).size().reset_index(name='count')\n",
+    "\n",
+    "# Filter rows where count is greater than 1 (indicating duplicates)\n",
+    "duplicate_rows = duplicate_counts[duplicate_counts['count'] > 1]\n",
+    "\n",
+    "# Display the duplicate rows\n",
+    "print(duplicate_rows)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
    "outputs": [],
@@ -360,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -492,16 +600,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total memory usage before optimization: 1614.01 MB\n",
-      "Numerical columns to be converted: ['ID', 'r', 'm (kg)', 'Mt', 'Enedc (g/km)', 'Ewltp (g/km)', 'W (mm)', 'At1 (mm)', 'At2 (mm)', 'ec (cm3)', 'ep (KW)', 'z (Wh/km)', 'Ernedc (g/km)', 'Erwltp (g/km)', 'De', 'Vf', 'year', 'Fuel consumption ', 'Electric range (km)', '#identical occurences']\n",
-      "Column 'ID' converted to float32.\n",
+      "Total memory usage before optimization: 1613.99 MB\n",
+      "Numerical columns to be converted: ['r', 'm (kg)', 'Mt', 'Enedc (g/km)', 'Ewltp (g/km)', 'W (mm)', 'At1 (mm)', 'At2 (mm)', 'ec (cm3)', 'ep (KW)', 'z (Wh/km)', 'Ernedc (g/km)', 'Erwltp (g/km)', 'De', 'Vf', 'Fuel consumption ', 'Electric range (km)', '#identical occurences']\n",
       "Column 'r' converted to float32.\n",
       "Column 'm (kg)' converted to float32.\n",
       "Column 'Mt' converted to float32.\n",
@@ -517,10 +624,11 @@
       "Column 'Erwltp (g/km)' converted to float32.\n",
       "Column 'De' converted to float32.\n",
       "Column 'Vf' converted to float32.\n",
-      "Column 'year' converted to float32.\n",
       "Column 'Fuel consumption ' converted to float32.\n",
       "Column 'Electric range (km)' converted to float32.\n",
       "Column '#identical occurences' converted to float32.\n",
+      "Column 'ID' processed for missing values with Int64 dtype.\n",
+      "Column 'year' processed for missing values with Int64 dtype.\n",
       "Category columns: ['Country', 'VFN', 'Mp', 'Mh', 'Man', 'MMS', 'Tan', 'T', 'Va', 'Ve', 'Mk', 'Cn', 'Ct', 'Cr', 'Ft', 'Fm', 'IT', 'Status', 'Date of registration', 'ech', 'RLFI']\n",
       "Column 'Country' processed for missing values.\n",
       "Column 'VFN' processed for missing values.\n",
@@ -546,7 +654,7 @@
       "Object columns: []\n",
       "\n",
       "Data types after conversion:\n",
-      "ID                        float32\n",
+      "ID                          Int64\n",
       "Country                  category\n",
       "VFN                      category\n",
       "Mp                       category\n",
@@ -580,7 +688,7 @@
       "De                        float32\n",
       "Vf                        float32\n",
       "Status                   category\n",
-      "year                      float32\n",
+      "year                        Int64\n",
       "Date of registration     category\n",
       "Fuel consumption          float32\n",
       "ech                      category\n",
@@ -589,8 +697,8 @@
       "#identical occurences     float32\n",
       "dtype: object\n",
       "\n",
-      "Total memory usage after optimization: 1724.20 MB\n",
-      "Memory usage difference: 110.19 MB\n"
+      "Total memory usage after optimization: 1861.91 MB\n",
+      "Memory usage difference: 247.93 MB\n"
      ]
     }
    ],
@@ -607,6 +715,7 @@
     "\n",
     "# Identify all numerical columns (both integer and float)\n",
     "num_cols = df.select_dtypes(include=['number']).columns.tolist()\n",
+    "num_cols = [col for col in num_cols if col not in ['ID', 'year']]\n",
     "print(f\"Numerical columns to be converted: {num_cols}\")\n",
     "\n",
     "# Replace -99 with np.nan and convert numerical columns to float32\n",
@@ -616,6 +725,13 @@
     "    # Convert to float32\n",
     "    df[col] = df[col].astype('float32')\n",
     "    print(f\"Column '{col}' converted to float32.\")\n",
+    "    \n",
+    "# For 'ID' and 'year', handle missing values appropriately without changing the data type\n",
+    "for col in ['ID', 'year']:\n",
+    "    df[col] = df[col].replace(-99, np.nan)\n",
+    "    # If you need to handle NaN in integer columns, convert to pandas nullable integer type\n",
+    "    df[col] = df[col].astype('Int64')\n",
+    "    print(f\"Column '{col}' processed for missing values with Int64 dtype.\")\n",
     "\n",
     "# Replace -99 in category columns\n",
     "cat_cols = df.select_dtypes(include=['category']).columns.tolist()\n",
@@ -658,18 +774,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save again\n",
     "\n",
-    "EU_df.to_parquet(\"..\\Data\\EU\\EU all_dtypes_Tan_NaN_float32.parquet\")\n"
+    "EU_df.to_parquet(\"..\\..\\data\\EU\\EU all_dtypes_Tan_NaN_float32_Int64.parquet\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +928,7 @@
       "Data columns (total 41 columns):\n",
       " #   Column                 Dtype   \n",
       "---  ------                 -----   \n",
-      " 0   ID                     float32 \n",
+      " 0   ID                     Int64   \n",
       " 1   Country                category\n",
       " 2   VFN                    category\n",
       " 3   Mp                     category\n",
@@ -846,15 +962,15 @@
       " 31  De                     float32 \n",
       " 32  Vf                     float32 \n",
       " 33  Status                 category\n",
-      " 34  year                   float32 \n",
+      " 34  year                   Int64   \n",
       " 35  Date of registration   category\n",
       " 36  Fuel consumption       float32 \n",
       " 37  ech                    category\n",
       " 38  RLFI                   category\n",
       " 39  Electric range (km)    float32 \n",
       " 40  #identical occurences  float32 \n",
-      "dtypes: category(21), float32(20)\n",
-      "memory usage: 1.7 GB\n"
+      "dtypes: Int64(2), category(21), float32(18)\n",
+      "memory usage: 1.8 GB\n"
      ]
     }
    ],
