--- a/notebooks/Tillmann/EU_DataPreparation.ipynb
+++ b/notebooks/Tillmann/EU_DataPreparation.ipynb
@@ -123,7 +123,7 @@
     }
    ],
    "source": [
-    "# Loading data from the combined French datasets\n",
+    "# Loading data \n",
     "\n",
     "# Path to the neighboring 'data' folder\n",
     "data_path = os.path.abspath(os.path.join(os.getcwd(), '..', '..', 'data'))\n",
