Only copy&paste of used lin-reg-model... just starting and testing things out withn VS-Code.... [tbc]

--- a/notebooks/DataPipeline.ipynb
+++ b/notebooks/DataPipeline.ipynb
@@ -1243,7 +1243,130 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Victor:\n",
+    "# Starting by a copy and paste of best linear regressor so far...\n",
+    "# which worked good on my preprocessed-data starting by Andreas_parquet\n",
+    "# dropping all countries but France and dropping all years but 2022/2023\n",
+    "\n",
+    "#---------------------------------------------------------------------------#\n",
+    "\n",
+    "# Simple linear regression model\n",
+    "#\n",
+    "# droping \"Fuel consumption \" as \"explanotry var\"\n",
+    "# num. vars, using df_int_combustion_num -dataframe-\n",
+    "#  including fuel-type \"Ft\" (cat) one-hot-encoded (after Train-Test-Split)\n",
+    "#  including fuel-mode \"Fm\" (cat) one-hot-encoded (after Trian-Test-Split)\n",
+    "#  including Make      \"Mk\" (cat) one-hot-encoded (after Trian-Test-Split)\n",
+    "#  including Ino.Tech. \"IT\" (cat) one-hot-encoded (after Trian-Test-Split)\n",
+    "# scaling the features (after cat. encoding)\n",
+    "\n",
+    "# start clean\n",
+    "df_int_combustion_num = df_int_combustion_num_fallback.copy()\n",
+    "\n",
+    "# concatenate \"Ft\" column (fuel type) and \"Fm\" column (fuel mode) to the dataframe + Year\n",
+    "df_int_combustion_num  = pd.concat([df_int_combustion_num, df_int_combustion[[\"Ft\", \"Fm\", \"Mk\", \"IT\"]]], axis = 1)\n",
+    "\n",
+    "# create target data: var y (pd series)\n",
+    "y = df_int_combustion_num[\"Ewltp (g/km)\"]\n",
+    "print(\"Target variable: \", y.name)\n",
+    "\n",
+    "# create explanaory data: var X (pd dataframe) droping also fuel consumption\n",
+    "X = df_int_combustion_num.drop([\"Ewltp (g/km)\", \"Fuel consumption \"], axis = 1)\n",
+    "\n",
+    "# split the data into training, testing sub-sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size =0.25, random_state = 42)\n",
+    "\n",
+    "# encode Ft (cat.-var.) in X_train and X_test\n",
+    "X_train = pd.get_dummies(X_train, columns = [\"Ft\"], prefix = \"Ft\")\n",
+    "X_test = pd.get_dummies(X_test, columns = [\"Ft\"], prefix = \"Ft\")\n",
+    "\n",
+    "# encode Fm (cat.-var.) in X_train and X_test\n",
+    "X_train = pd.get_dummies(X_train, columns = [\"Fm\"], prefix = \"Fm\")\n",
+    "X_test = pd.get_dummies(X_test, columns = [\"Fm\"], prefix = \"Fm\")\n",
+    "\n",
+    "# encode Mk (cat.-var.) in X_train and X_test\n",
+    "X_train = pd.get_dummies(X_train, columns = [\"Mk\"], prefix = \"Mk\")\n",
+    "X_test = pd.get_dummies(X_test, columns = [\"Mk\"], prefix = \"Mk\")\n",
+    "\n",
+    "# encode IT (cat.-var.) in X_train and X_test\n",
+    "X_train = pd.get_dummies(X_train, columns = [\"IT\"], prefix = \"IT\")\n",
+    "X_test = pd.get_dummies(X_test, columns = [\"IT\"], prefix = \"IT\")\n",
+    "print(\"Explanatory variables: \", X_train.columns)\n",
+    "print()\n",
+    "\n",
+    "# Align columns in X_train and X_test (in case some categories are not present in test or train)\n",
+    "X_test = X_test.reindex(columns=X_train.columns, fill_value=0)\n",
+    "\n",
+    "# create a scaler\n",
+    "scaler = preprocessing.StandardScaler().fit(X_train)\n",
+    "\n",
+    "# apply the scaler to X_train and X_test\n",
+    "X_train_scaled = scaler.transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "# display(X_train_scaled)\n",
+    "\n",
+    "# create an instance of a lin. reg. modell\n",
+    "lr = LinearRegression()\n",
+    "\n",
+    "# train/fit the model\n",
+    "lr.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "# display intercept and coeff (slope) together with the var/column involved -> in a df\n",
+    "coeffs = list(lr.coef_)\n",
+    "coeffs.insert(0, lr.intercept_)\n",
+    "\n",
+    "features = list(X_train.columns)\n",
+    "features.insert(0, \"intercept\")\n",
+    "\n",
+    "coef = pd.DataFrame({\"Estimated value\": coeffs}, index = features)\n",
+    "# print(\"Linear regression model coefficients:\")\n",
+    "# display(coef)\n",
+    "# print()\n",
+    "\n",
+    "# display the score (R²) of the model on the training sample.\n",
+    "score_train = round(lr.score(X_train_scaled, y_train), 3)\n",
+    "print(\"Score (R²) of the model on the training sample: \", score_train)\n",
+    "\n",
+    "# display score of cross validation 10-fold  - mean\n",
+    "score_cross_val = round(cross_val_score(lr, X_train_scaled, y_train, cv = 10).mean(), 3)\n",
+    "print(\"Score of cross validation - mean: \", score_cross_val)\n",
+    "\n",
+    "# display the score (R²) of the model on the test sample.\n",
+    "score_test = round(lr.score(X_test_scaled, y_test), 3)\n",
+    "print(\"Score (R²) of the model on the test sample: \", score_test)\n",
+    "print()\n",
+    "\n",
+    "# store the model pred. for X_train_scaled and X_test_scaled in the\n",
+    "# respective tables (pred_train) and (pred_test).\n",
+    "pred_train = lr.predict(X_train_scaled)\n",
+    "pred_test = lr.predict(X_test_scaled)\n",
+    "\n",
+    "# display the roots of the mean square errors RMSE for both samples.\n",
+    "rmse_train = round(np.sqrt(mean_squared_error(y_train, pred_train)),2)\n",
+    "rmse_test =  round(np.sqrt(mean_squared_error(y_test, pred_test)),2)\n",
+    "print(\"RMSE on train-set: \", rmse_train)\n",
+    "print(\"RMSE on test-set: \", rmse_test)\n",
+    "print()\n",
+    "\n",
+    "#-------------------------------------------------\n",
+    "# # concatenate X_train, y_train\n",
+    "# df_train = pd.concat([X_train, y_train], axis = 1)\n",
+    "\n",
+    "# # calc correlation\n",
+    "# df_train_cor = round(df_train.corr(),2)\n",
+    "\n",
+    "# # display heatmap\n",
+    "# plt.figure(figsize=(22,18))\n",
+    "# sns.heatmap(df_train_cor, annot = False);\n",
+    "# -------------------------------------------------\n",
+    "\n",
+    "# Score (R²) of the model on the training sample: 0.913\n",
+    "# Score of cross validation - mean: - 1 ?!?!?\n",
+    "# Score (R²) of the model on the test sample: 0.915\n",
+    "# RMSE train-set: 7.17\n",
+    "# RMSE test-set: 1.13\n"
+   ]
   }
  ],
  "metadata": {
