Alex: Updated DataPipeline.ipynb

--- a/notebooks/DataPipeline.ipynb
+++ b/notebooks/DataPipeline.ipynb
@@ -141,6 +141,8 @@
     "# Check the path\n",
     "print(data_path + '/EU_all_current_shared.parquet')\n",
     "\n",
+    "data_path = r'C:\\Users\\alexa\\Downloads\\aug24_bds_int---co2\\data' #Alex path\n",
+    "\n",
     "# Load parquet data\n",
     "table = pq.read_table(os.path.join(data_path, 'EU_all_current_shared.parquet'))\n",
     "\n",
@@ -1193,7 +1195,357 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Data pipeline for classification models "
+    "# 2. Data pipeline for classification models (ALEX)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "0- Visualize the stand of the data set so far (check summary)- save sub-path\n",
+    "\n",
+    "1- Further Data Preprocessing (if needed after the big one already done):\n",
+    "\n",
+    "- Handel removal of variables\n",
+    "- Handle missing values, if any (impute or drop).\n",
+    "- Encode categorical variables.\n",
+    "\n",
+    "2- Define the Target and Features:\n",
+    "\n",
+    "- Separate the target variable (dependent variable) and the features (independent variables).\n",
+    "\n",
+    "3- Train-Test Split:\n",
+    "\n",
+    "- Split the data into training and testing sets to evaluate model performance on unseen data.\n",
+    "\n",
+    "- Normalize or standardize the features (for algorithms sensitive to feature scaling, like Ridge or Lasso).\n",
+    "\n",
+    "4- Fit/Train the Regression Model:\n",
+    "\n",
+    "- Choose the regression algorithm (Linear Regression, Decision Trees, Random Forest).\n",
+    "- Train the model using the training set.\n",
+    "\n",
+    "5-Evaluate the Model:\n",
+    "\n",
+    "- Use the test set to make predictions.\n",
+    "- Compute evaluation metrics like R-squared and Mean Squared Error (MSE).\n",
+    "\n",
+    "6- Cross-Validation:\n",
+    "\n",
+    "- cross-validation to assess the stability of the model across different subsets of the data.\n",
+    "\n",
+    "7- Interpret Results:\n",
+    "\n",
+    "- Compare training vs. test set performance.\n",
+    "- Check for overfitting or underfitting.\n",
+    "\n",
+    "8 - Compare performance of different models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check summary\n",
+    "\n",
+    "# enabling the display of all columns\n",
+    "pd.set_option('display.max_rows', None)\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "\n",
+    "# Get the data types of each column\n",
+    "data_types = df.dtypes\n",
+    "\n",
+    "# Get the number of unique values for each categorical column\n",
+    "unique_values = df.select_dtypes(include=['int64', 'float64', 'object', 'category', 'bool']).nunique()\n",
+    "\n",
+    "# Get the percentage of missing values for each column\n",
+    "missing_values = df.isnull().mean() * 100\n",
+    "\n",
+    "# Combine the information into a DataFrame\n",
+    "summary_df = pd.DataFrame({\n",
+    "    'Data Type': data_types,\n",
+    "    'Unique Values': unique_values,\n",
+    "    'Missing Values (%)': missing_values\n",
+    "})\n",
+    "\n",
+    "# Sort the summary DataFrame by the percentage of missing values in descending order\n",
+    "summary_df = summary_df.sort_values(by='Missing Values (%)', ascending=False)\n",
+    "\n",
+    "# Print the summary DataFrame\n",
+    "print(summary_df)\n",
+    "\n",
+    "# Show the "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Colums to exclude from the analysis: De, ech, RLFI, Vf, Ct, Cn, Cr, IT, Non_Electric_Car, Electric range (km),z (Wh/km) \n",
+    "\n",
+    "- Deviation factor (DE): In order to understand the DE, one has first to understand the context: \n",
+    "\n",
+    "** CO2MPAS is a vehicle simulation model for the calculation of CO2 emissions, energy, and fuel consumption from passenger cars and light commercial vehicles. It uses experimental data, retrieved from chassis dyno or on-road tests, to simulate the operation of vehicles under different operating conditions.The CO2MPAS model is able to provide the difference in CO2 emissions under the two different test procedures.\n",
+    "\n",
+    "The WLTP is the new and more realistic procedure for the emission type-approval of light duty vehicles which replaces the old and outdated NEDC procedure starting from 2017. The use CO2MPAS for the purpose of correlating CO2 emissions determined on the NEDC and the WLTP is set out in Commission Implementing Regulations (EU) 2017/1152 (light commercial vehicles) and 2017/1153 (passenger cars).\n",
+    "\n",
+    "The correlation of CO2 emission values is required to ensure a transition from NEDC based CO2 emission targets to targets based on WLTP emissions under Regulation (EU) 2019/631 setting out CO2 emission performance standards for light duty vehicles.\n",
+    "\n",
+    "In order to ensure that the correlated NEDC values are correct, 10% of the vehicle interpolation families that are subject to a CO2MPAS simulation are randomly selected for a physical vehicle test, using the “DICE” module of \n",
+    "CO2MPAS. For each such test, a deviation factor (De) should be calculated and recorded in the type approval certificate and the certificate of conformity. \n",
+    "\n",
+    "** The De expresses the deviation between the CO2 emissions determined through the physical vehicle test and the CO2 emissions declared by the manufacturer in view of the CO2MPAS simulation.\n",
+    "\n",
+    "If, for one or more interpolation families of a manufacturer, the De is higher than 0.04, this triggers the calculation of a correction factor, by which the average specific CO2 emissions of the manufacturer will be multiplied. \n",
+    "\n",
+    "Nearly all values are missing. \n",
+    "\n",
+    "- ech und RLFI: Meaning is not clear and nearly all values missing.\n",
+    "\n",
+    "- Verification factor (Vf): The application of a correction factor may also be triggered by the presence of a verification factor (Vf) of 1 for one or more interpolation families of a manufacturer. The Vf is recorded \n",
+    "as “1” in the type approval certificate if the type approval authority finds that the input data for the correlation procedure as reported by the manufacturer were incorrect or where it has justified reasons to deem the CO2 value declared by the manufacturer to be too low. - Most of verification factors since 2018 are 1\n",
+    "\n",
+    "\n",
+    "- Commercial name(Cn): A vehicle identifier. This is a categorical variable. It is interesting that in previous analyses the same car sold accross different countries show significant difference in Ewltp emissions. However,\n",
+    "the data quality is low, and with nearly 30.000 uniques values, it would pose a challenge for encoding. \n",
+    "\n",
+    "- Category of vehicle type approved (Ct) and Category of vehicle registered (Cr): Here the Cr superseeds Ct. But it is irrelevant at the end, since ALL the data set is of the category M1 (light passenger vehicles )  \n",
+    "\n",
+    "\n",
+    "                              Columns to be temporarily excluded for modeling exercise (other team members may want to work with this part):\n",
+    "\n",
+    "IT: Code for the use of eco-innovation technologies. Types are Lights,Alternators, Thermal,Kinetic, Solar, etc (see pager Eco-Innovations, 2018). However, the coding is unclear.(Erwltp (g/km) was already removed by Tillman/ Andreas)\n",
+    "\n",
+    "Mk: Make\n",
+    "Z: Electric energy consumption\n",
+    "\n",
+    "___ NOT SURE WHERE THIS IS COMING FROM\n",
+    "\n",
+    "- Electric_range\n",
+    "- Non_Electric_Car: only one unique value. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List of columns to be exclude from analysis \n",
+    "\n",
+    "columns_to_remove = [\n",
+    "    'De', \n",
+    "    'Mk',\n",
+    "    'ech', \n",
+    "    'RLFI', \n",
+    "    'Vf', \n",
+    "    'Ct', \n",
+    "    'Cn', \n",
+    "    'Cr', \n",
+    "    'IT',   \n",
+    "    'Non_Electric_Car', \n",
+    "    'Electric range (km)', \n",
+    "    'z (Wh/km)'\n",
+    "]\n",
+    "\n",
+    "# Exclude \n",
+    "df_reg = df.drop(columns=columns_to_remove, errors='ignore') \n",
+    "\n",
+    "# Display the cleaned DataFrame shape\n",
+    "print(df_reg.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check summary\n",
+    "\n",
+    "# Get the data types of each column\n",
+    "data_types = df_reg.dtypes\n",
+    "\n",
+    "# Get the number of unique values for each categorical column\n",
+    "unique_values = df_reg.select_dtypes(include=['int64', 'float64', 'object', 'category', 'bool']).nunique()\n",
+    "\n",
+    "# Get the percentage of missing values for each column\n",
+    "missing_values = df_reg.isnull().mean() * 100\n",
+    "\n",
+    "# Combine the information into a DataFrame\n",
+    "summary_df_reg = pd.DataFrame({\n",
+    "    'Data Type': data_types,\n",
+    "    'Unique Values': unique_values,\n",
+    "    'Missing Values (%)': missing_values\n",
+    "})\n",
+    "\n",
+    "# Sort the summary DataFrame by the percentage of missing values in descending order\n",
+    "summary_df_reg = summary_df_reg.sort_values(by='Missing Values (%)', ascending=False)\n",
+    "\n",
+    "# Print the summary DataFrame\n",
+    "print(summary_df_reg)\n",
+    "\n",
+    "# Show the shape of the original DataFrame\n",
+    "df_reg.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dealing with missing values\n",
+    "\n",
+    "# W, At1 and At2 follow roughly a normal distribution. Ergo missing values can be replaced with the mean\n",
+    "# Ec, Ep, Fuel consumption are skewed. Missing values will be replace with the median.\n",
+    "\n",
+    "df_reg['W (mm)'] = df_reg['W (mm)'].fillna(df_reg['W (mm)'].mean())\n",
+    "df_reg['At1 (mm)'] = df_reg['At1 (mm)'].fillna(df_reg['At1 (mm)'].mean())\n",
+    "df_reg['At2 (mm)'] = df_reg['At2 (mm)'].fillna(df_reg['At2 (mm)'].mean())\n",
+    "\n",
+    "# Removing rows with missing values\n",
+    "\n",
+    "# List of columns to check for missing values\n",
+    "columns_to_check = ['ec (cm3)', 'ep (KW)', 'Mt', 'm (kg)', 'Fm', 'Ft']\n",
+    "\n",
+    "# Remove rows with missing values in specified columns\n",
+    "df_reg = df_reg.dropna(subset=columns_to_check)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the data types of each column\n",
+    "data_types = df_reg.dtypes\n",
+    "\n",
+    "# Get the number of unique values for each categorical column\n",
+    "unique_values = df_reg.select_dtypes(include=['int64', 'float64', 'object', 'category', 'bool']).nunique()\n",
+    "\n",
+    "# Get the percentage of missing values for each column\n",
+    "missing_values = df_reg.isnull().mean() * 100\n",
+    "\n",
+    "# Combine the information into a DataFrame\n",
+    "summary_df_reg = pd.DataFrame({\n",
+    "    'Data Type': data_types,\n",
+    "    'Unique Values': unique_values,\n",
+    "    'Missing Values (%)': missing_values\n",
+    "})\n",
+    "\n",
+    "# Sort the summary DataFrame by the percentage of missing values in descending order\n",
+    "summary_df_reg = summary_df_reg.sort_values(by='Missing Values (%)', ascending=False)\n",
+    "\n",
+    "# Print the summary DataFrame\n",
+    "print(summary_df_reg)\n",
+    "\n",
+    "# Show the shape of the original DataFrame\n",
+    "df_reg.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assuming df_reg_cleaned is your cleaned DataFrame\n",
+    "categorical_cols = ['Fm', 'Ft']  # Add all categorical columns here\n",
+    "\n",
+    "# Loop through each categorical column and print unique values\n",
+    "for col in categorical_cols:\n",
+    "    unique_values = df_reg[col].unique()\n",
+    "    print(f\"Unique values in '{col}': {list(unique_values)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Renaming cat variable : Ft (Fuel type)\n",
+    "\n",
+    "# Define the mapping for standardization\n",
+    "mapping = {\n",
+    "    'DIESEL': 'diesel',\n",
+    "    'diesel': 'diesel',\n",
+    "    'Gasoline': 'gasoline',\n",
+    "    'GASOLINE': 'gasoline',\n",
+    "    'petrol': 'gasoline',\n",
+    "    'PETROL': 'gasoline',\n",
+    "    'ELECTRIC':'electric',\n",
+    "    'hybrid': 'hybrid',\n",
+    "    'HYBRID': 'hybrid',\n",
+    "    'CNG': 'cng',\n",
+    "    'LPG': 'lpg',\n",
+    "    'Ethanol': 'ethanol',\n",
+    "    'PETROL/ELECTRIC':'gasoline/electric',\n",
+    "    'E85': 'ethanol',\n",
+    "    'e85' : 'ethanol',\n",
+    "    'ng' : 'natural gas',\n",
+    "    'NG' : 'natural gas',\n",
+    "    'NG-BIOMETHANE' : 'natural gas/biomethane',\n",
+    "    'ng-biomethane' : 'natural gas/biomethane',\n",
+    "    'DIESEL/ELECTRIC' : 'diesel/electric',\n",
+    "    'HYDROGEN' : 'hydrogen',\n",
+    "    'lpg' : 'liquefied petroleum gas',\n",
+    "    'petrol/electric': 'gasoline/electric'\n",
+    "    # Add any other mappings as needed\n",
+    "}\n",
+    "\n",
+    "# Apply the mapping to the 'Ft' column\n",
+    "df_reg['Ft'] = df_reg['Ft'].replace(mapping)\n",
+    "\n",
+    "# Check the unique values after mapping\n",
+    "df_reg = df_reg['Ft'].unique()\n",
+    "print(\"Unique Ft after mapping:\", df_reg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Encoding, separation of target, train_test split, finally scaler\n",
+    "\n",
+    "# Identify categorical and numerical columns\n",
+    "categorical_cols = ['Fm', 'Ft']\n",
+    "numerical_cols = df_reg.select_dtypes(include=['float32']).columns.tolist()\n",
+    "\n",
+    "# Step 1: Encode categorical variables\n",
+    "encoder = OneHotEncoder(sparse_output=False, drop='first')\n",
+    "X_encoded = encoder.fit_transform(df_reg[categorical_cols])\n",
+    "\n",
+    "# Step 2: Create a DataFrame for the encoded categorical variables\n",
+    "X_encoded_df = pd.DataFrame(X_encoded, columns=encoder.get_feature_names_out(categorical_cols))\n",
+    "\n",
+    "# Step 3: Combine the encoded variables with the remaining numerical variables\n",
+    "X = pd.concat([X_encoded_df, df_reg[numerical_cols]], axis=1)  # Renamed to X\n",
+    "\n",
+    "# Step 4: Separate features and target variable\n",
+    "\n",
+    "y = df_reg['Ewltp (g/km)']\n",
+    "\n",
+    "# Ensure X is based on the same DataFrame\n",
+    "X = df_reg.drop(columns=['Ewltp (g/km)'])\n",
+    "\n",
+    "# Step 5: Split into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Step 6: Scale the numerical variables\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "# Check the shapes of the train and test sets\n",
+    "print(f\"X_train shape: {X_train_scaled.shape}, y_train shape: {y_train.shape}\")\n",
+    "print(f\"X_test shape: {X_test_scaled.shape}, y_test shape: {y_test.shape}\")"
    ]
   },
   {
